--- a/scripts/imblearn_model_build_notebook.ipynb
+++ b/scripts/imblearn_model_build_notebook.ipynb
@@ -9,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "geological-niagara",
    "metadata": {},
@@ -19,24 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "911ceaa6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# input\n",
-    "model_dir = \"ADRA2A_PIC50\"\n",
-    "data_file_name = \"./ADRA2A_PIC50_train.tsv\"\n",
+    "model_dir = \"AHR_PEC50\"\n",
+    "data_file_name = \"./AHR_PEC50_train.tsv\"\n",
     "# output\n",
-    "scalar_file_name = \"./scalar_ADRA2A_PIC50.pkl\"\n",
-    "ecc_model_file = \"./ADRA2A_PIC50_svm.pkl\"\n",
-    "brf_model_file = \"./ADRA2A_PIC50_xgb.pkl\"\n",
-    "rusb_model_file = \"./ADRA2A_PIC50_rusb.pkl\""
+    "scalar_file_name = \"./scalar_AHR_PEC50.pkl\"\n",
+    "ecc_model_file = \"./AHR_PEC50_ecc.pkl\"\n",
+    "brf_model_file = \"./AHR_PEC50_brf.pkl\"\n",
+    "rusb_model_file = \"./AHR_PEC50_rusb.pkl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "italian-sodium",
    "metadata": {},
    "outputs": [],
@@ -49,13 +48,14 @@
     "from sklearn.model_selection import train_test_split, StratifiedKFold, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import precision_score, recall_score, roc_auc_score, balanced_accuracy_score, matthews_corrcoef, cohen_kappa_score \n",
+    "from utils import rdkit_fpconvert_numpy, rdkit_get_physchem_descr\n",
     "\n",
     "seed = 1234"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "after-possession",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dangerous-madrid",
    "metadata": {},
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dramatic-wrong",
    "metadata": {},
    "outputs": [],
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "gothic-milwaukee",
    "metadata": {},
    "outputs": [],
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "warming-referral",
    "metadata": {},
    "outputs": [],
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "major-lingerie",
    "metadata": {},
    "outputs": [],
@@ -132,10 +131,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "compact-structure",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/hpc/mydata/stv/jal44287/CONDA/qsar_imb/lib/python3.12/site-packages/sklearn/base.py:348: InconsistentVersionWarning: Trying to unpickle estimator StandardScaler from version 1.0.2 when using version 1.3.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# save scalar\n",
     "scale = joblib.load(scalar_file_name)"
@@ -171,32 +180,32 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 4 candidates, totalling 20 fits\n",
-      "[CV] END ....................................n_estimators=10; total time=   1.7s\n",
-      "[CV] END ....................................n_estimators=10; total time=   1.7s\n",
-      "[CV] END ....................................n_estimators=10; total time=   1.7s\n",
-      "[CV] END ....................................n_estimators=10; total time=   1.7s\n",
-      "[CV] END ....................................n_estimators=10; total time=   1.7s\n",
-      "[CV] END ....................................n_estimators=30; total time=   5.2s\n",
-      "[CV] END ....................................n_estimators=30; total time=   5.2s\n",
-      "[CV] END ....................................n_estimators=30; total time=   5.1s\n",
-      "[CV] END ....................................n_estimators=30; total time=   5.2s\n",
-      "[CV] END ....................................n_estimators=30; total time=   5.2s\n",
-      "[CV] END ....................................n_estimators=50; total time=   8.6s\n",
-      "[CV] END ....................................n_estimators=50; total time=   8.6s\n",
-      "[CV] END ....................................n_estimators=50; total time=   8.6s\n",
-      "[CV] END ....................................n_estimators=50; total time=   8.7s\n",
-      "[CV] END ....................................n_estimators=50; total time=   8.7s\n",
-      "[CV] END ...................................n_estimators=100; total time=  20.9s\n",
-      "[CV] END ...................................n_estimators=100; total time=  18.7s\n",
-      "[CV] END ...................................n_estimators=100; total time=  17.2s\n",
-      "[CV] END ...................................n_estimators=100; total time=  17.2s\n",
-      "[CV] END ...................................n_estimators=100; total time=  17.3s\n"
+      "[CV] END ....................................n_estimators=10; total time=   1.8s\n",
+      "[CV] END ....................................n_estimators=10; total time=   2.0s\n",
+      "[CV] END ....................................n_estimators=10; total time=   2.0s\n",
+      "[CV] END ....................................n_estimators=10; total time=   2.1s\n",
+      "[CV] END ....................................n_estimators=10; total time=   2.1s\n",
+      "[CV] END ....................................n_estimators=30; total time=   6.2s\n",
+      "[CV] END ....................................n_estimators=30; total time=   6.3s\n",
+      "[CV] END ....................................n_estimators=30; total time=   6.3s\n",
+      "[CV] END ....................................n_estimators=30; total time=   6.1s\n",
+      "[CV] END ....................................n_estimators=30; total time=   6.0s\n",
+      "[CV] END ....................................n_estimators=50; total time=  10.6s\n",
+      "[CV] END ....................................n_estimators=50; total time=   9.8s\n",
+      "[CV] END ....................................n_estimators=50; total time=  10.1s\n",
+      "[CV] END ....................................n_estimators=50; total time=   8.0s\n",
+      "[CV] END ....................................n_estimators=50; total time=  10.2s\n",
+      "[CV] END ...................................n_estimators=100; total time=  25.4s\n",
+      "[CV] END ...................................n_estimators=100; total time=  19.9s\n",
+      "[CV] END ...................................n_estimators=100; total time=  20.0s\n",
+      "[CV] END ...................................n_estimators=100; total time=  20.1s\n",
+      "[CV] END ...................................n_estimators=100; total time=  20.2s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['./ADRA2A_PIC50_eec.pkl']"
+       "['./AHR_PEC50_ecc.pkl']"
       ]
      },
      "execution_count": 10,
@@ -239,22 +248,22 @@
       "[CV] END ....................................n_estimators=30; total time=   0.1s\n",
       "[CV] END ....................................n_estimators=30; total time=   0.1s\n",
       "[CV] END ....................................n_estimators=30; total time=   0.1s\n",
-      "[CV] END ....................................n_estimators=50; total time=   0.1s\n",
-      "[CV] END ....................................n_estimators=50; total time=   0.1s\n",
-      "[CV] END ....................................n_estimators=50; total time=   0.1s\n",
-      "[CV] END ....................................n_estimators=50; total time=   0.1s\n",
-      "[CV] END ....................................n_estimators=50; total time=   0.1s\n",
-      "[CV] END ...................................n_estimators=100; total time=   0.2s\n",
-      "[CV] END ...................................n_estimators=100; total time=   0.2s\n",
-      "[CV] END ...................................n_estimators=100; total time=   0.2s\n",
-      "[CV] END ...................................n_estimators=100; total time=   0.2s\n",
-      "[CV] END ...................................n_estimators=100; total time=   0.2s\n"
+      "[CV] END ....................................n_estimators=50; total time=   0.2s\n",
+      "[CV] END ....................................n_estimators=50; total time=   0.2s\n",
+      "[CV] END ....................................n_estimators=50; total time=   0.2s\n",
+      "[CV] END ....................................n_estimators=50; total time=   0.2s\n",
+      "[CV] END ....................................n_estimators=50; total time=   0.2s\n",
+      "[CV] END ...................................n_estimators=100; total time=   0.4s\n",
+      "[CV] END ...................................n_estimators=100; total time=   0.3s\n",
+      "[CV] END ...................................n_estimators=100; total time=   0.3s\n",
+      "[CV] END ...................................n_estimators=100; total time=   0.3s\n",
+      "[CV] END ...................................n_estimators=100; total time=   0.3s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['./ADRA2A_PIC50_brf.pkl']"
+       "['./AHR_PEC50_brf.pkl']"
       ]
      },
      "execution_count": 11,
@@ -293,26 +302,26 @@
       "[CV] END ....................................n_estimators=10; total time=   0.1s\n",
       "[CV] END ....................................n_estimators=10; total time=   0.1s\n",
       "[CV] END ....................................n_estimators=30; total time=   0.2s\n",
+      "[CV] END ....................................n_estimators=30; total time=   0.1s\n",
       "[CV] END ....................................n_estimators=30; total time=   0.2s\n",
       "[CV] END ....................................n_estimators=30; total time=   0.2s\n",
       "[CV] END ....................................n_estimators=30; total time=   0.2s\n",
-      "[CV] END ....................................n_estimators=30; total time=   0.2s\n",
       "[CV] END ....................................n_estimators=50; total time=   0.3s\n",
       "[CV] END ....................................n_estimators=50; total time=   0.3s\n",
       "[CV] END ....................................n_estimators=50; total time=   0.3s\n",
       "[CV] END ....................................n_estimators=50; total time=   0.3s\n",
       "[CV] END ....................................n_estimators=50; total time=   0.3s\n",
-      "[CV] END ...................................n_estimators=100; total time=   0.6s\n",
+      "[CV] END ...................................n_estimators=100; total time=   0.5s\n",
       "[CV] END ...................................n_estimators=100; total time=   0.5s\n",
       "[CV] END ...................................n_estimators=100; total time=   0.6s\n",
-      "[CV] END ...................................n_estimators=100; total time=   0.6s\n",
+      "[CV] END ...................................n_estimators=100; total time=   0.5s\n",
       "[CV] END ...................................n_estimators=100; total time=   0.5s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['./ADRA2A_PIC50_rusb.pkl']"
+       "['./AHR_PEC50_rusb.pkl']"
       ]
      },
      "execution_count": 12,
@@ -354,10 +363,10 @@
      "text": [
       "EEC Train:\n",
       "Precision =  1.0\n",
-      "ROC-AUC =  0.9060457516339869\n",
-      "Balanced Accuracy Score =  0.9060457516339869\n",
-      "MCC =  0.6225665639589993\n",
-      "Kappa =  0.5586511441188278\n"
+      "ROC-AUC =  0.9663461538461539\n",
+      "Balanced Accuracy Score =  0.9663461538461539\n",
+      "MCC =  0.9162003475894762\n",
+      "Kappa =  0.9127025614218505\n"
      ]
     }
    ],
@@ -384,11 +393,11 @@
      "output_type": "stream",
      "text": [
       "EEC Test:\n",
-      "Precision =  0.9916666666666667\n",
-      "ROC-AUC =  0.8671328671328672\n",
-      "Balanced Accuracy Score =  0.8671328671328671\n",
-      "MCC =  0.547562941427901\n",
-      "Kappa =  0.47572815533980584\n"
+      "Precision =  0.72\n",
+      "ROC-AUC =  0.6274038461538461\n",
+      "Balanced Accuracy Score =  0.6274038461538461\n",
+      "MCC =  0.2520952919018819\n",
+      "Kappa =  0.25178147268408546\n"
      ]
     }
    ],
@@ -415,11 +424,11 @@
      "output_type": "stream",
      "text": [
       "BRF Train:\n",
-      "Precision =  1.0\n",
-      "ROC-AUC =  0.928921568627451\n",
-      "Balanced Accuracy Score =  0.928921568627451\n",
-      "MCC =  0.6849328183743822\n",
-      "Kappa =  0.6386528335331838\n"
+      "Precision =  0.9897959183673469\n",
+      "ROC-AUC =  0.958409645909646\n",
+      "Balanced Accuracy Score =  0.9584096459096458\n",
+      "MCC =  0.902470686576531\n",
+      "Kappa =  0.8999250936329588\n"
      ]
     }
    ],
@@ -447,11 +456,11 @@
      "output_type": "stream",
      "text": [
       "BRF Train:\n",
-      "Precision =  0.9761904761904762\n",
-      "ROC-AUC =  0.8416583416583416\n",
-      "Balanced Accuracy Score =  0.8416583416583416\n",
-      "MCC =  0.5241877966925762\n",
-      "Kappa =  0.4720496894409938\n"
+      "Precision =  0.75\n",
+      "ROC-AUC =  0.6850961538461539\n",
+      "Balanced Accuracy Score =  0.6850961538461539\n",
+      "MCC =  0.381356384904845\n",
+      "Kappa =  0.3793103448275862\n"
      ]
     }
    ],
@@ -479,11 +488,11 @@
      "output_type": "stream",
      "text": [
       "RUSB Train:\n",
-      "Precision =  0.9320388349514563\n",
-      "ROC-AUC =  0.7254901960784313\n",
-      "Balanced Accuracy Score =  0.7254901960784313\n",
-      "MCC =  0.35444489141573904\n",
-      "Kappa =  0.32616953387469827\n"
+      "Precision =  1.0\n",
+      "ROC-AUC =  0.9951923076923077\n",
+      "Balanced Accuracy Score =  0.9951923076923077\n",
+      "MCC =  0.9873752355458539\n",
+      "Kappa =  0.9872955496386459\n"
      ]
     }
    ],
@@ -511,11 +520,11 @@
      "output_type": "stream",
      "text": [
       "RUSB Train:\n",
-      "Precision =  0.9083969465648855\n",
-      "ROC-AUC =  0.6555944055944056\n",
-      "Balanced Accuracy Score =  0.6555944055944056\n",
-      "MCC =  0.24577478229336402\n",
-      "Kappa =  0.22753834915997084\n"
+      "Precision =  0.7083333333333334\n",
+      "ROC-AUC =  0.6081730769230769\n",
+      "Balanced Accuracy Score =  0.6081730769230769\n",
+      "MCC =  0.2123019439021117\n",
+      "Kappa =  0.21126760563380276\n"
      ]
     }
    ],
